Manifest/application/blog-application.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: blog-app
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8.2.4-noble
          imagePullPolicy: Always
          ports:
            - containerPort: 27017

          resources:
            limits:
              memory: "512Mi"
              cpu: "200m"

          readinessProbe:
            httpGet:
              path: /
              port: 27017
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 3
            
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: blog-app
spec: 
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: kings5layer/blog-posts:180808d
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: posts
  namespace: blog-app
spec:
  selector:
    app: posts
  ports:
    - protocol: TCP
      targetPort: 5000
      port: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
  namespace: blog-app
spec:
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: kings5layer/blog-reviews:7b1d632
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: blog-app
spec:
  selector:
    app: reviews
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
  namespace: blog-app
spec:
  selector:
    matchLabels:
      app: ratings
  template:
    metadata:
      labels:
        app: ratings
    spec:
      containers:
        - name: ratings
          image: kings5layer/blog-ratings:8ec0854
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: blog-app
spec:
  selector:
    app: ratings
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: blog-app
spec:
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: kings5layer/blog-users:27a3d99
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: blog-app
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: blog-app
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kings5layer/blog-frontend:d9fa4bf
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: blog-app
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: blog.application.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
